@@ -770,16 +770,35 @@ theme: ${TMPLDIR}
 	} && echo "-- New theme '${name}' created!\nThis theme is available in '${TMPLDIR}/${name}' directory."
 .endif
 
+# Create post: simple post creation
+# note: create_post.sh -q 1 do not display any editor
+createpost: ${DBDIR} ${SRCDIR} ${TMPDIR}
+	$Q{ cat ${TOOLSDIR}/create_post.sh |${parser} \
+		"DBDIR=${DBDIR}" \
+		"SRCDIR=${SRCDIR}" > ${TMPDIR}/create_post.sh && \
+		chmod +x ${TMPDIR}/create_post.sh && \
+		${TMPDIR}/create_post.sh -q 0 || \
+		{ \
+			rm -rf ${TMPDIR}/create_post.sh && \
+			echo "-- New post failed!" ; \
+			false ; \
+		} ; \
+	} && echo "-- New post added successfully."
+
+add: createpost
+
 # list: list all available command as a help command
 list: 
 	$Qecho "List of available commands: \n \
-		list     list all available commands \n \
-		help     same as 'list' command \n \
-		clean    clean up current directory from generated files \n \
-		all      create all entire weblog \n \
-		backup   make a backup from your current makefly directory \n \
-		publish  publish your weblog using tools/publish.sh script \n \
-		theme    copy 'base' theme to create a new one named using 'name' variable"
+		list       list all available commands \n \
+		help       same as 'list' command \n \
+		clean      clean up current directory from generated files \n \
+		all        create all entire weblog \n \
+		createpost create a new post \n \
+		add        same as 'createpost' \n \
+		backup     make a backup from your current makefly directory \n \
+		publish    publish your weblog using tools/publish.sh script \n \
+		theme      copy 'base' theme to create a new one named using 'name' variable"
 
 help: list
 
